--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,23 +16,41 @@ em {
 .flex {
   display: flex;
 }
+h1,
+h2 {
+  padding: 20px 0 20px 0;
+}
 body {
   margin: 0;
   padding: 0;
 }
 .backgroundHomeSize {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
 }
 .backgroundDog {
-  /* background-image: url("https://cdn.pixabay.com/photo/2015/07/27/19/11/beach-863139_960_720.jpg"); */
+  background-image: url("../img/home.jpg");
   width: 100%;
-  height: 500px;
+  height: 100vh;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
+}
+.displayHomeTitle {
+  position: absolute;
+  top: 100px;
+  font-family: "Roboto Slab", serif;
+  color: white;
+}
+#homeTitle {
+  font-size: 3rem;
+}
+.displayHomeTitle p {
+  font-size: 1.5rem;
 }
 header {
   width: 100%;
@@ -51,9 +69,9 @@ header {
 .navbar {
   background-color: #e4e9ee !important;
 }
-h1,
-h2 {
-  margin: 25px 0 25px 0;
+.homeNavBar {
+  background-color: rgba(34, 34, 34, 0.8) !important;
+  color: white;
 }
 .figcaptionBanner {
   font-size: 1.3rem;
@@ -68,16 +86,30 @@ h2 {
   font-weight: bold;
 }
 form {
-  margin: 30px 0 30px 0;
+  padding: 20px 0 25px 0;
+}
+.loginForm input {
+  border: none !important;
+  background-color: rgb(110, 110, 110) !important;
+  color: white !important;
+}
+.registerForm input {
+  border: none !important;
+  background-color: rgb(110, 110, 110) !important;
+  color: white !important;
 }
 footer {
   width: 100%;
   height: 60px;
   margin-top: 55px;
-  background-color: rgb(59, 59, 59);
+  background-color: rgb(34, 34, 34, 0.9);
   color: white;
   font-family: "Roboto Slab", serif;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.homeFooter {
+  position: absolute;
+  bottom: 0;
 }
