--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -24,13 +24,13 @@
 	<body>
 		{% block body %}
 			<div
-				class="backgroundSize">
+				class="backgroundHomeSize">
 				{# header #}
 				<header>
 
 					{# navbar #}
 					<nav
-						class="navbar navbar-expand-lg navbar-dark bg-dark">
+						class="navbar navbar-expand-lg navbar-dark bg-dark homeNavBar">
 
 						{# logo #}
 						<a class="navbar-brand" href="{{path('accueil')}}">
@@ -46,10 +46,10 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
 								<li class="nav-item">
-									<a class="nav-link" href="{{path('app_logout')}}">Connexion</a>
+									<a class="nav-link" href="{{path('app_login')}}">Connexion</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="{{path('sessions_index')}}">Inscription</a>
+									<a class="nav-link" href="{{path('app_register')}}">Inscription</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="{{path('formations_index')}}">Les formations</a>
@@ -59,8 +59,15 @@
 					</nav>
 				</header>
 
-				{# container #}
-				{% block container %}{% endblock %}
+				{# background #}
+				{% block background %}
+					<div class="backgroundDog">
+						<div class="container">
+							{% block container %}{% endblock %}
+						</div>
+					</div>
+					{# container #}
+				{% endblock %}
 
 			{% endblock %}
 
