--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block title %}Log in
 {% endblock %}
 
 {% block container %}
-	<form method="post">
+	<form class="loginForm" method="post">
 		{% if error %}
 			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 		{% endif %}
@@ -27,8 +27,14 @@
 
 		{# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality. See https://symfony.com/doc/current/security/remember_me.html <div class="checkbox mb-3"><label><input type="checkbox" name="_remember_me"> Remember me</label></div>#}
 
-		<button class="btn btn btn-outline-primary" type="submit">
+		<button class="btn btn-secondary" style="margin-top: 15px !important;" type="submit">
 			Envoyer
 		</button>
 	</form>
+{% endblock %}
+
+{% block footer %}
+	<footer class="homeFooter">
+		Terence Mathieu & Béatrice Machalica | Dog Academy | 2021 Mentions légales
+	</footer>
 {% endblock %}
