--- a/templates/session/show.html.twig
+++ b/templates/session/show.html.twig
@@ -49,6 +49,9 @@
 			</tr>
 		</tbody>
 	</table>
+	<button class="btn btn-primary">
+		<a href="#" style="color:white; text-decoration: none;">Ajouter un Atelier</a>
+	</button>
 
 	{# participants #}
 	<h2>Chiens et maîtres inscrits à la Formation</h2>
@@ -67,6 +70,6 @@
 		</tbody>
 	</table>
 	<button class="btn btn-primary">
-		<a href="#" style="color:white; text-decoration: none;">Inscrire un nouveau chien</a>
+		<a href="#" style="color:white; text-decoration: none;">Ajouter un chien</a>
 	</button>
 {% endblock %}
