--- a/templates/maitre/show.html.twig
+++ b/templates/maitre/show.html.twig
@@ -6,6 +6,7 @@
 {% block container %}
 	<h1>Information du maître</h1>
 
+	{# détails du maitre #}
 	<table class="table">
 		<thead>
 			<tr>
@@ -14,6 +15,7 @@
 				<th scope="col">Ville</th>
 				<th scope="col">Mail</th>
 				<th scope="col">Téléphone</th>
+				<th scope="col">Nombre de chien(s) inscrits</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -23,7 +25,37 @@
 				<td>{{ maitre.ville |capitalize }}</td>
 				<td>{{ maitre.mail }}</td>
 				<td>{{ maitre.telephone }}</td>
+				<td>{{ maitre.chiens |length }}</td>
 			</tr>
 		</tbody>
 	</table>
+
+	{# chiens #}
+	<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">Chiens inscrits</th>
+				<th scope="col">Race</th>
+				<th scope="col">Date de Naissance</th>
+				<th scope="col">Age</th>
+				<th scope="col">Formation</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for chien in maitre.chiens %}
+				<tr>
+					<td>{{ chien.nom }}</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td>
+						<a href="{{ path('chien_show', {'id': chien.id}) }}">consulter</a>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+	<button class="btn btn-primary">
+		<a href="{{ path('chien_add') }}" style="color:white; text-decoration: none;">Ajouter un chien</a>
+	</button>
 {% endblock %}
