--- a/templates/session/show.html.twig
+++ b/templates/session/show.html.twig
@@ -32,7 +32,6 @@
 	</table>
 
 	{# programme #}
-	<h2>Programme</h2>
 	<table class="table">
 		<thead>
 			<tr>
@@ -54,11 +53,10 @@
 	</button>
 
 	{# participants #}
-	<h2>Chiens et maîtres inscrits à la Formation</h2>
 	<table class="table">
 		<thead>
 			<tr>
-				<th scope="col">Chiens</th>
+				<th scope="col">Chiens inscrits</th>
 				<th scope="col">Maîtres</th>
 			</tr>
 		</thead>
