--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 			<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 		{% endfor %}
 
-		<h1>Inscription</h1>
+		<h1 class="text-center" style="color:white;">Inscription</h1>
 		<div class="registerForm">
 			{{ form_start(registrationForm) }}
 
