--- a/templates/chien/show.html.twig
+++ b/templates/chien/show.html.twig
@@ -43,6 +43,6 @@
 		</tbody>
 	</table>
 	<button class="btn btn-primary">
-		<a href="#" style="color:white; text-decoration: none;">Ajouter une session</a>
+		<a href="#" style="color:white; text-decoration: none;">Inscrire à une formation</a>
 	</button>
 {% endblock %}
