--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -4,5 +4,9 @@
 {% endblock %}
 
 {% block body %}
-	{% block container %}{% endblock %}
+	{% block container %}
+	
+	<h1>Bonjour monsieur l'admin</h1>
+	
+	{% endblock %}
 {% endblock %}
