--- a/templates/formation/show.html.twig
+++ b/templates/formation/show.html.twig
@@ -10,7 +10,7 @@
 		<h2>{{ formation.nom |capitalize }}</h2>
 		<div class="flex">
 			<div class="col-5">
-				<img src="{{ asset('img/' ~ formation.img) }}" alt="photo formation">
+				<img src="{{ asset('img/' ~ formation.img) }}" alt="photo formation pour chien">
 			</div>
 			<div class="col-7">
 				<p class="text-justify">{{ formation.description |capitalize }}</p>
