--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,8 +71,9 @@
 							</li>
 							{# account #}
 							<li class="nav-item">
-								<a class="nav-link" href="#">
-									Mon compte
+								<a class="nav-link" href="{{path('user_index')}}">
+									Compte
+									<i class="fas fa-user"></i>
 								</a>
 							</li>
 							<li class="nav-item">
