update Terms of use

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -29,6 +29,7 @@
 
 {% block footer %}
 	<footer class="homeFooter">
-		Terence Mathieu & Béatrice Machalica | Dog Academy | 2021 Mentions légales
+		<a href="{{path('conditions')}}" style="color:white;">
+			Conditions d'utilisation</a>, Terence Mathieu & Béatrice Machalica | Dog Academy | 2021 Mentions légales
 	</footer>
 {% endblock %}
