--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -10,16 +10,13 @@
 		<h1>Ajout d'une Session</h1>
 	{% endif %}
 
-	{# simplement afficher le formulaire #}
-	{# {{ form(formAddSession) }} #}
-
 	{# début du contenu du formulaire #}
 	{{form_start(formAddSession)}}
 
 	{{form_row(formAddSession.formation)}}
 	{{form_row(formAddSession.nbPlace)}}
 	{{form_row(formAddSession.dateDebut)}}
-	{{form_row(formAddSession.dateFin)}}
+	{{form_row(formAddSession.dateFin)}} 
 	<ul id="chiens" data-prototype="{{ form_row(formAddSession.chien.vars.prototype)|e }}">
 
 		{% for chien in formAddSession.chien %}
@@ -29,6 +26,8 @@
 		{% endfor %}
 
 	</ul>
+	{# Prévenir l'affichage du champs en prétendant qu'il est déjà remplis #}
+	{# {% do formAddSession.chien.setRendered() %} #}
 	{# submit button #}
 		<button type="submit" class="btn btn-outline-primary"> {% if editMode %}
 			Modifier
@@ -38,7 +37,7 @@
 	</button>
 
 	{# fin du formulaire #}
-	{{form_end(formAddSession)}}
+	{{form_end(formAddSession, {'render_rest': false})}}
 
 {% endblock %}
 {% block javascripts %}
