--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -20,17 +20,16 @@
 	{{form_row(formAddSession.nbPlace)}}
 	{{form_row(formAddSession.dateDebut)}}
 	{{form_row(formAddSession.dateFin)}}
-	<ul id="chiens" data-prototype="{{ form_row(formAddSession.chien.vars.prototype)|e }}">
-
-		{% for chien in formAddSession.chien %}
-		<li class="chien">
-		{{ form_row(chien) }}
-		</li>
+		<ul id="chiens" data-prototype="{{ form_row(formAddSession.chien.vars.prototype)|e }}"> {% for chien in formAddSession.chien %}
+			<li class="chien">
+				{{ form_row(chien) }}
+			</li>
 		{% endfor %}
 
 	</ul>
 	{# submit button #}
-		<button type="submit" class="btn btn-outline-primary"> {% if editMode %}
+	<button type="submit" class="btn btn-outline-primary">
+		{% if editMode %}
 			Modifier
 		{% else %}
 			Ajouter
