--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,6 +31,7 @@
 			Envoyer
 		</button>
 	</form>
+	<a href="{{ path('forgotten_password') }}" style="color:white;">Mot de passe oublié ?</a>
 {% endblock %}
 
 {% block footer %}
