liste des formations

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,12 @@ body {
   background-position: center;
   position: relative;
 }
+.listeFormation {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+}
 
 /* home Title */
 .displayHomeTitle {
