--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -53,7 +53,7 @@
 									<a class="nav-link" href="{{path('app_register')}}">Inscription</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="{{path('formations_index')}}">Les formations</a>
+									<a class="nav-link" href="{{path('liste_formations')}}">Les formations</a>
 								</li>
 							</ul>
 						</div>
