--- a/templates/formation/show.html.twig
+++ b/templates/formation/show.html.twig
@@ -14,6 +14,16 @@
 			</div>
 			<div class="col-7">
 				<p class="text-justify">{{ formation.description |capitalize }}</p>
+				<p>
+					<strong>
+						Intervenants pour cette formation :
+					</strong>
+				</p>
+				<ul>
+					{% for user in formation.users %}
+						<li>{{ user.prenom |capitalize ~ ' ' ~ user.nom |capitalize }}</li>
+					{% endfor %}
+				</ul>
 			</div>
 		</div>
 	</article>
@@ -32,8 +42,8 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				{% for session in formation.sessions %}
+			{% for session in formation.sessions %}
+				<tr>
 					<td>{{ session.id }}</td>
 					<td>{{ session.nbPlace }}</td>
 					<td>{{ session.nbPlace - session.chien |length }}</td>
@@ -44,8 +54,8 @@
 							<i class="fas fa-arrow-right"></i>
 						</a>
 					</td>
-				{% endfor %}
-			</tr>
+				</tr>
+			{% endfor %}
 		</tbody>
 	</table>
 
